renamings in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(VirtualAwaiter)
+project(DynamicAwaiter)
 
 # No Werror for google test and benchmark 
 set(CMAKE_CXX_FLAGS_TSAN "-O2 -Wall -Wextra -Wpedantic -fsanitize=thread -g")
@@ -34,11 +34,11 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O2 -Wall -Wextra -Wpedantic -Werror")
 
 
 add_executable(
-    benchmark_virtual_awaiter
+    benchmark_dynamic_awaiter
     benchmark/shared_data_case.cpp
 )
-target_compile_definitions(benchmark_virtual_awaiter PRIVATE TEST_VIRTUAL_AWAITER)
-target_link_libraries(benchmark_virtual_awaiter benchmark::benchmark)
+target_compile_definitions(benchmark_dynamic_awaiter PRIVATE TEST_DYNAMIC_AWAITER)
+target_link_libraries(benchmark_dynamic_awaiter benchmark::benchmark)
 
 add_executable(
     benchmark_new_future
@@ -58,8 +58,8 @@ target_link_libraries(test_dynamic_awaiter gtest_main)
 
 
 add_custom_target(run-all-benchmarks
-    DEPENDS benchmark_virtual_awaiter benchmark_new_future
-    COMMAND benchmark_virtual_awaiter --benchmark_out=${CMAKE_SOURCE_DIR}/benchmark/results/benchmark_virtual_awaiter.txt --benchmark_out_format=console
+    DEPENDS benchmark_dynamic_awaiter benchmark_new_future
+    COMMAND benchmark_dynamic_awaiter --benchmark_out=${CMAKE_SOURCE_DIR}/benchmark/results/benchmark_dynamic_awaiter.txt --benchmark_out_format=console
     COMMAND benchmark_new_future --benchmark_out=${CMAKE_SOURCE_DIR}/benchmark/results/benchmark_new_future.txt --benchmark_out_format=console
 )
 
